--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "noor",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
     "dev": "nodemon dist/app.js",
     "start": "nodemon dist/app.js"
@@ -14,7 +14,6 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^17.0.36",
     "@types/nodemailer": "^6.4.4",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -33,6 +32,9 @@
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "@types/node": "^18.7.17",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   }
 }
