--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "dev": "nodemon dist/app.js",
-    "start": "nodemon dist/app.js"
+    "start:dev": "nodemon",
+    "build": "rimraf ./build && tsc"
   },
   "author": "",
   "license": "ISC",
@@ -29,11 +29,12 @@
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.7",
     "runtypes": "^6.5.1",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.9"
   },
   "devDependencies": {
     "@types/node": "^18.7.17",
     "nodemon": "^2.0.19",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
