--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MYSQL_USER=noor
-MYSQL_PASSWORD=noor
-MYSQL_DATABASE=noor
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_DATABASE=noordb
 MYSQ_HOST=127.0.0.1:3306
 DEBUG=1
 JWT_SECRET=lkfajs;oirekwngjafld
