--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "start:dev": "nodemon",
-    "build": "rimraf ./build && tsc",
-    "typeorm": "typeorm-ts-node-commonjs -d ./src/infrastructure/typeorm.ts"
+    "build": "rimraf ./build && tsc"
   },
   "author": "",
   "license": "ISC",
